--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "ignore": [],
   "dependencies": {
     "prelude-ls": "~1.1.1",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "jquery-textcomplete": "~0.3.9"
   }
 }
