--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-plumber": "^0.6.6",
     "event-stream": "^3.3.0",
     "gulp-stylus": "^2.0.1",
-    "gulp-jade": "^1.0.0"
+    "gulp-jade": "^1.0.0",
+    "gulp-zip": "^3.0.2"
   }
 }
