--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gc-chrome-extension-for-chatwork",
+  "name": "gc-chatwork-extension",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
